--- a/PROYECTO/ProyectoWeb1/web/WEB-INF/web.xml
+++ b/PROYECTO/ProyectoWeb1/web/WEB-INF/web.xml
@@ -21,6 +21,8 @@
     <welcome-file-list>
         <welcome-file>faces/index.xhtml</welcome-file>
     </welcome-file-list>
+    <jsp-config>
+    </jsp-config>
     <resource-ref>
         <description>conexion al derby</description>
         <res-ref-name>jdbc/sample</res-ref-name>
