--- a/PROYECTO/ProyectoWeb1/nbproject/project.properties
+++ b/PROYECTO/ProyectoWeb1/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.BootsFaces-OSP-1.3.0-dist.jar=/Users/jvanegas/Downloads/BootsFaces-OSP-1.3.0-dist.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +43,8 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.BootsFaces-OSP-1.3.0-dist.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
